# ADF_Resource_Manager

./: .gitignore  Readme.md  pyproject.toml
src/adf_resource_manager/: Deployment_Template.json  Tag_Deployer.ps1
src/adf_resource_manager/Deploy/: Tag_Deployer.ps1
src/adf_resource_manager/Main/: Retrieve_ARM_Resources.ps1  Tag_Deployer.ps1
src/linkedServices/: Silver_Storage_Account.json
tests/: test_adf_resource_manager.py
