[tool.poetry]
name = "ADF_Resource_Manager"
version = "0.1.0"
description = ""
authors = ["sebastian hansen <sebastian.hansen@dataalchemy.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
azure-cli = "^2.42.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
